Add 4th paragraph to cover letter generator: enhanced content for all three tones (Professional, Friendly, Formal) with additional depth about collaboration, work ethic, and team fit

--- a/cover-letter.html
+++ b/cover-letter.html
@@ -873,18 +873,21 @@
                 bodyContent = `
                     <p>I am writing to express my strong interest in the ${position} position at ${companyName}. With a proven track record of excellence and a passion for delivering results, I am confident that I would be a valuable addition to your team.</p>
                     <p>${keyPoints ? `My qualifications include ${keyPoints}. ` : ''}I am particularly drawn to ${companyName} because of your reputation for innovation and commitment to excellence. I am excited about the opportunity to contribute to your continued success.</p>
+                    <p>Throughout my career, I have consistently demonstrated the ability to work collaboratively with diverse teams, adapt to changing environments, and deliver high-quality results under pressure. I am eager to bring this same level of dedication and professionalism to ${companyName}.</p>
                     <p>I would welcome the opportunity to discuss how my skills and experience align with your needs. Thank you for considering my application. I look forward to hearing from you.</p>
                 `;
             } else if (currentTone === 'friendly') {
                 bodyContent = `
                     <p>I'm thrilled to apply for the ${position} role at ${companyName}! I've been following your company's work and I'm genuinely excited about the possibility of joining your team.</p>
                     <p>${keyPoints ? `What sets me apart is my experience with ${keyPoints}. ` : ''}I love what ${companyName} stands for, and I'm eager to bring my enthusiasm and skills to help you achieve your goals.</p>
+                    <p>I'm someone who thrives in collaborative environments and loves tackling new challenges. I believe in bringing positive energy to every project and working closely with teammates to create something amazing together. I think my approach would be a great fit for your team culture.</p>
                     <p>I'd love to chat more about how I can contribute to your team. Thanks so much for taking the time to consider my application - I'm really looking forward to connecting!</p>
                 `;
             } else {
                 bodyContent = `
                     <p>I am writing to formally apply for the ${position} position at ${companyName}. After careful consideration of the requirements and my professional background, I am confident that my qualifications align perfectly with your needs.</p>
                     <p>${keyPoints ? `My professional experience encompasses ${keyPoints}. ` : ''}I have long admired ${companyName}'s commitment to excellence and would be honored to contribute to your organization's continued success.</p>
+                    <p>In addition to my technical expertise, I bring a strong work ethic, attention to detail, and a commitment to maintaining the highest standards of professional conduct. I am confident that these attributes, combined with my relevant experience, would enable me to make meaningful contributions to your organization.</p>
                     <p>I respectfully request the opportunity to discuss my candidacy further. I am available at your earliest convenience and look forward to your favorable consideration.</p>
                 `;
             }
